--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mern-frontend",
+  "name": "vendor",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
+    "dotenv": "^17.2.3",
     "leaflet": "^1.9.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
