--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL=https://anthropology-dns-unit-informative.trycloudflare.com
+VITE_API_BASE_URL=https://shippzi.onrender.com
 # VITE_API_BASE_URL=http://localhost:3000
