--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL=https://shippzi.onrender.com
+VITE_API_BASE_URL=https://pregnant-tuesday-res-instruction.trycloudflare.com
 # VITE_API_BASE_URL=http://localhost:3000
