--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-VITE_API_BASE_URL=https://pregnant-tuesday-res-instruction.trycloudflare.com
-# VITE_API_BASE_URL=http://localhost:3000
+# VITE_API_BASE_URL=https://pregnant-tuesday-res-instruction.trycloudflare.com
+VITE_API_BASE_URL=https://shippzi.onrender.com
+# VITE_API_BASE_URL=https://draw-entertaining-omissions-cinema.trycloudflare.com
