--- a/.env
+++ b/.env
@@ -1,7 +1,4 @@
 # # VITE_API_BASE_URL=https://pregnant-tuesday-res-instruction.trycloudflare.com
-VITE_API_BASE_URL=https://shippzi.onrender.com
-<<<<<<< HEAD
-# VITE_API_BASE_URL=https://fcc-assistant-sms-constitution.trycloudflare.com
-=======
-VITE_API_BASE_URL=https://draw-entertaining-omissions-cinema.trycloudflare.com
->>>>>>> 01cc38473ab7ea3e21550b39c274ea456028d0a7
+# VITE_API_BASE_URL=https://shippzi.onrender.com
+VITE_API_BASE_URL=https://going-slideshow-sequences-pickup.trycloudflare.com
+# VITE_API_BASE_URL=https://draw-entertaining-omissions-cinema.trycloudflare.com
