--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "dotenv": "^17.2.3",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
