--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-VITE_API_BASE_URL=https://salary-athletics-nano-across.trycloudflare.com
-VITE_SOCKET_URL=wss://salary-athletics-nano-across.trycloudflare.com
+
+VITE_API_BASE_URL=https://backend.shippzi.com
+VITE_SOCKET_URL=wss://backend.shippzi.com
+
